@@ -1,13 +1,12 @@
 Summary:   ChilliSpot is a Wireless LAN Access Point Controller
 Name:      @PACKAGE@
-Version:   @VERSION@
-Release:   coova.2
+Version:   1.0
+Release:   coova.3 
 URL:       http://coova.org/wiki/index.php/CoovaChilli
-Source0:   %{name}-%{version}.tar.gz
+Source0:   %{name}-%{version}-%{release}.tar.gz
 License:   GPL
 Group:     System Environment/Daemons
 BuildRoot: %{_tmppath}/%{name}-root
-Patch:     chillispot-1.0.patch
 
 %description 
 
@@ -22,8 +21,7 @@ For more information on this Coova release of ChilliSpot, visit
 http://coova.org/
 
 %prep
-%setup -q
-%patch -p1 -b .buildroot
+%setup -n chillispot-1.0-coova.3 
 
 %build
 
@@ -35,22 +33,20 @@ make
 
 make install prefix=$RPM_BUILD_ROOT/usr
 strip $RPM_BUILD_ROOT/usr/sbin/chilli
-strip $RPM_BUILD_ROOT/usr/sbin/chilli
+strip $RPM_BUILD_ROOT/usr/sbin/chilli_response
 strip $RPM_BUILD_ROOT/usr/sbin/chilli_radconfig
 strip $RPM_BUILD_ROOT/usr/sbin/chilli_query
 strip $RPM_BUILD_ROOT/usr/sbin/test_radius
 
 #Copy chilli init script in place
 mkdir -p $RPM_BUILD_ROOT/etc/rc.d/init.d
-install -m755 doc/chilli.init \
-	$RPM_BUILD_ROOT/etc/rc.d/init.d/chilli
+install -m755 doc/chilli.init $RPM_BUILD_ROOT/etc/rc.d/init.d/chilli
 
 #Copy chilli.conf in place
 mkdir -p $RPM_BUILD_ROOT/etc/chilli
 install -m755 conf/chilli.conf $RPM_BUILD_ROOT/etc/chilli.conf
 #install -m755 conf/shape.sh $RPM_BUILD_ROOT/etc/chilli/shape.sh
 install -m755 conf/firewall $RPM_BUILD_ROOT/etc/chilli/firewall
-install -m755 conf/setup $RPM_BUILD_ROOT/etc/chilli/setup
 install -m755 conf/functions $RPM_BUILD_ROOT/etc/chilli/functions
 install -m644 conf/defaults $RPM_BUILD_ROOT/etc/chilli/defaults
 mkdir -p $RPM_BUILD_ROOT/etc/chilli/www
@@ -73,6 +69,7 @@ make clean
 %defattr(-,root,root)
 
 %attr(755, root, root) /usr/sbin/chilli
+%attr(755, root, root) /usr/sbin/chilli_response
 %attr(755, root, root) /usr/sbin/chilli_radconfig
 %attr(755, root, root) /usr/sbin/chilli_query
 %attr(755, root, root) /usr/sbin/test_radius
@@ -90,10 +87,11 @@ make clean
 %config /etc/chilli.conf
 %config /etc/chilli/firewall
 %config /etc/chilli/functions
-%config /etc/chilli/setup
 %config /etc/chilli/defaults
 %config /etc/chilli/www/splash.html
 
 %changelog
+* Wed Nov 15 2006  <david@coova.com>
+- 1.0-coova.3 release
 * Thu Mar 25 2004  <support@chillispot.org>
 - Initial release.
