@@ -74,7 +74,9 @@ writeconfig() {
     HS_UAMALLOW=$(echo $HS_UAMALLOW|sed 's/ /,/g')
     uamallow=${HS_UAMALLOW:+",$HS_UAMALLOW"}
 
-    [ "$HS_WEB_ADMIN" = "on" ] && webadmin=",$HS_UAMLISTEN"
+    [ "$HS_WEB_ADMIN" = "http"  ] || [ "$HS_WEB_ADMIN" = "both" ] && webadmin="$webadmin,$HS_UAMLISTEN:80"
+    [ "$HS_WEB_ADMIN" = "https" ] || [ "$HS_WEB_ADMIN" = "both" ] && webadmin="$webadmin,$HS_UAMLISTEN:443"
+    [ "$HS_LOCAL" = "on" ] && webadmin="$webadmin,$HS_UAMLISTEN:3443"
     [ "$HS_MACAUTH" = "on" ] && addconfig2 "macauth"
     [ "$HS_MACAUTHMODE" = "local" ] && addconfig1 "macallowlocal"
     [ "$HS_USELOCALUSERS" = "on" ] && [ -s /etc/chilli/localusers ] && \
