@@ -1,6 +1,8 @@
 
 == ChangeLog (Coova Chilli current svn revision) ==
 
+== ChangeLog (Coova Chilli v1.0.3 svn revision 33?) ==
+
 * The [http://www.gnu.org/software/gengetopt/gengetopt.html gengetopt] project accepted our changes to allow 'include <file>' in config files. The new cmdline.c is generated with gengetopt v2.19 or higher
 * Added the ''wpaguests'' option to allow anonymous WPA access w/captive-portal
 * Added option for ''localusers'' file to authenticate users from a local file (inspired by FON)
@@ -14,6 +16,7 @@
 * The option ''wwwbin'' which, when configured, is the program used to deliver local content (in the ''wwwdir'') with the extention ".chi" (perfect for haserl)
 * The option ''wwwui'' which when used with ''uamuiport'' is the alternate program to use for local content
 * The ''chilli_response'' binary taking 3 arguments <hex-challenge> <uamsecret> <password> and returning the appropriate response
+* New options ''postauthproxy'' and ''postauthproxyport'' to configure an upstream transparent proxy to use post-authentication for http traffic
 	
 == ChangeLog (Coova Chilli v1.0.2 svn revision 17) ==
 
